// Copyright (c) YugaByte, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
// in compliance with the License.  You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software distributed under the License
// is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
// or implied.  See the License for the specific language governing permissions and limitations
// under the License.
//
syntax = "proto3";

package yb.dockv;

option java_package = "org.yb.dockv";

message ColumnPackingPB {
  uint32 id = 1;
  uint64 num_varlen_columns_before = 2;
  uint64 offset_after_prev_varlen_column = 3;
  uint64 size = 4;
  bool nullable = 5;
}

message SchemaPackingPB {
  uint32 schema_version = 1;
  repeated ColumnPackingPB columns = 2;

  // Columns that present in schema but don't participate in packing.
  repeated uint32 skipped_column_ids = 3;
}
